@@ -2,3 +2,11 @@ PlayCustomParameters
 ====================
 
 Domain Specific Parametrization for TTworkbench
+
+
+Run Configuration
+-----------------
+
+In order to debug the software suite with bigger testing environments it is advised to add a VM argument:
+
+**-XX:MaxPermSize=128M**
